# thinmatrixgl

./: CMakeLists.txt
src/: main.c
